# PyThor

./: .gitignore  README.md  app.py  config.yaml  data_request.py  fetcher.py  interpolation.py  main.py  redme  requirements.txt  setup.cfg  setup.py  test.py
PyThor/: __init__.py  __main__.py  app_pythor.py  config.yaml  config_schema.yaml
PyThor/config/: __init__.py  config.py
PyThor/data/: __init__.py  data_request.py  fetcher.py  interpolation.py
PyThor/utilities/: __init__.py  files.py
Scripts/: example.py  request_gen.py
