[metadata]
name = pythor
version = 1.0.0
author = Konrad Drozd, Michał Jaroszewicz
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SanityRemnants/PyThor
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
  '' = PyThor
python_requires = >=3.6


[options.package_data]
PyThor = *.yaml